# ansible-sample

./: .ansible-lint  install_nodejs_on_yum.yaml  install_ruby_on_rbenv.ansible.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
inventories/: development.yaml
playbooks/: install_nodejs_on_yum.yaml  install_ruby_on_rbenv.yaml
