[tool.poetry]
name = "ansible-sample"
version = "0.1.0"
description = ""
authors = ["Ryu Sato <ryu@weseek.co.jp>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.3.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^6.9.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
